調整結構+放圖片

--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -45,9 +45,8 @@
                                     aria-controls="swiper-wrapper-53fd5a51ba467ec1" aria-disabled="false">
                                     <img class="next-prev-img" src="./img/commodity-next.svg" alt="">
                                 </div>
-                                <div class="swiper-button-prev" tabindex="0" role="button"
-                                    aria-label="Previous slide" aria-controls="swiper-wrapper-53fd5a51ba467ec1"
-                                    aria-disabled="false">
+                                <div class="swiper-button-prev" tabindex="0" role="button" aria-label="Previous slide"
+                                    aria-controls="swiper-wrapper-53fd5a51ba467ec1" aria-disabled="false">
                                     <img class="next-prev-img" src="./img/commodity-prev.svg" alt="">
                                 </div>
                             </div>
@@ -238,6 +237,7 @@
             <!-- 夫 資料填寫 -->
             <section id="fillout-area">
                 <div class="container">
+                    <!-- 完成 -->
                     <div class="title">
                         <div class="title-img"></div>
                         <div class="title-text">
@@ -245,59 +245,77 @@
                             <div class="title-text-bottom">DISTRIBUTION</div>
                         </div>
                     </div>
+                    <!-- 完成 -->
+
                     <div class="basic-info-fillout">
-                        <div class="title">經銷商基本資料填寫</div>
+                        <div class="fill-title">經銷商基本資料填寫</div>
                         <div class="fillout">
                             <form action="">
-                                <div class="">
-                                    <div>
-                                        <div>姓名｜Name</div>
-                                        <input type="text" placeholder="姓名">
+                                <div class="fill-input">
+                                    <div class="top-input">
+
+                                        <div class="fill-name">
+                                            <div>姓名｜Name</div>
+                                            <input type="text" placeholder="姓名">
+                                        </div>
+
+                                        <div class="fill-date">
+                                            <div>出生年月日｜Birthday</div>
+                                            <input type="date" placeholder="yyyy/月/dd">
+                                        </div>
+
                                     </div>
+
                                     <div>
-                                        <div>出生年月日｜Birthday</div>
-                                        <input type="date" placeholder="yyyy/月/dd">
+                                        <div>電子信箱｜Email</div>
+                                        <input type="email" placeholder="電子信箱">
                                     </div>
-                                </div>
-                                <div>
-                                    <div>電子信箱｜Email</div>
-                                    <input type="email" placeholder="電子信箱">
-                                </div>
-                                <div>
-                                    <div>聯絡電話｜Phone</div>
-                                    <input type="number" placeholder="聯絡電話">
-                                </div>
-                                <div>
-                                    <div>聯絡地址｜Address</div>
-                                    <input type="text" placeholder="聯絡地址">
+
+                                    <div>
+                                        <div>聯絡電話｜Phone</div>
+                                        <input type="number" placeholder="聯絡電話">
+                                    </div>
+
+                                    <div>
+                                        <div>聯絡地址｜Address</div>
+                                        <input type="text" placeholder="聯絡地址">
+                                    </div>
+
                                 </div>
                             </form>
                         </div>
                     </div>
                     <div class="sales-fillout">
-                        <div class="title">經銷商販售方式填寫</div>
+                        <div class="fill-title">經銷商販售方式填寫</div>
                         <div class="fillout">
                             <form action="">
+                                <div>
+                                    <div>
+                                        <label for="channel">經銷通路｜Sales Channel</label>
+                                        <select id="channel">
+                                            <option value="commerce" disabled selected>----請選擇</option>
+                                            <option value="commerce">網路電商 E-Commerce</option>
+                                            <option value="convenience">便利商店 Concenience Store</option>
+                                            <option value="supermarket">超市 Supermarket</option>
+                                            <option value="hypermarket">大賣店 Hypermarket</option>
+                                        </select>
+                                    </div>
 
-                                <label for="channel">經銷通路｜Sales Channel</label>
-                                <select id="channel">
-                                    <option value="commerce" disabled selected>----請選擇</option>
-                                    <option value="commerce">網路電商 E-Commerce</option>
-                                    <option value="convenience">便利商店 Concenience Store</option>
-                                    <option value="supermarket">超市 Supermarket</option>
-                                    <option value="hypermarket">大賣店 Hypermarket</option>
-                                </select>
+                                    <div>
+                                        <label for="country">預定經銷國家｜Distirbution Area</label>
+                                        <select id="country">
+                                            <option value="america">America</option>
+                                            <option value="california">California</option>
+                                            <option value="canada">Canada</option>
+                                            <option value="taiwan" selected>Taiwan</option>
+                                        </select>
+                                    </div>
 
-                                <label for="country">預定經銷國家｜Distirbution Area</label>
-                                <select id="country">
-                                    <option value="america">America</option>
-                                    <option value="california">California</option>
-                                    <option value="canada">Canada</option>
-                                    <option value="taiwan" selected>Taiwan</option>
-                                </select>
-
-                                <div>其他｜Other</div>
-                                <input type="text" placeholder="其他">
+                                    <div>
+                                        <div>其他｜Other</div>
+                                        <input type="text" placeholder="其他">
+                                    </div>
+                                </div>
                             </form>
                         </div>
                     </div>
