產品經銷 80%完成

--- a/distribution.html
+++ b/distribution.html
@@ -56,13 +56,177 @@
             </div>
           </div>
           <!-- 產品方格 -->
-          <div class="product-group">
-            <div class="product-background">
-              <div class="product">
-                <img
-                  src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
-                  alt="產品1"
-                />
+          <div class="prduct-grid-columns">
+            <div class="product-group">
+              <div class="product-img-group">
+                <div class="product-background">
+                  <div class="product">
+                    <img
+                      src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
+                      alt="產品1"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="product-info">
+                <div class="product-title">老虎芝士流心雪糕</div>
+                <div class="product-title-en">
+                  Tiger Cheese Filling Black Sugar Ice Cream Bar
+                </div>
+                <div class="product-id">冰品 | Ice</div>
+              </div>
+            </div>
+
+            <div class="product-group">
+              <div class="product-img-group">
+                <div class="product-background">
+                  <div class="product">
+                    <img
+                      src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
+                      alt="產品1"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="product-info">
+                <div class="product-title">老虎芝士流心雪糕</div>
+                <div class="product-title-en">
+                  Tiger Cheese Filling Black Sugar Ice Cream Bar
+                </div>
+                <div class="product-id">冰品 | Ice</div>
+              </div>
+            </div>
+
+            <div class="product-group">
+              <div class="product-img-group">
+                <div class="product-background">
+                  <div class="product">
+                    <img
+                      src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
+                      alt="產品1"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="product-info">
+                <div class="product-title">老虎芝士流心雪糕</div>
+                <div class="product-title-en">
+                  Tiger Cheese Filling Black Sugar Ice Cream Bar
+                </div>
+                <div class="product-id">冰品 | Ice</div>
+              </div>
+            </div>
+
+            <div class="product-group">
+              <div class="product-img-group">
+                <div class="product-background">
+                  <div class="product">
+                    <img
+                      src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
+                      alt="產品1"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="product-info">
+                <div class="product-title">老虎芝士流心雪糕</div>
+                <div class="product-title-en">
+                  Tiger Cheese Filling Black Sugar Ice Cream Bar
+                </div>
+                <div class="product-id">冰品 | Ice</div>
+              </div>
+            </div>
+
+            <div class="product-group">
+              <div class="product-img-group">
+                <div class="product-background">
+                  <div class="product">
+                    <img
+                      src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
+                      alt="產品1"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="product-info">
+                <div class="product-title">老虎芝士流心雪糕</div>
+                <div class="product-title-en">
+                  Tiger Cheese Filling Black Sugar Ice Cream Bar
+                </div>
+                <div class="product-id">冰品 | Ice</div>
+              </div>
+            </div>
+
+            <div class="product-group">
+              <div class="product-img-group">
+                <div class="product-background">
+                  <div class="product">
+                    <img
+                      src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
+                      alt="產品1"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="product-info">
+                <div class="product-title">老虎芝士流心雪糕</div>
+                <div class="product-title-en">
+                  Tiger Cheese Filling Black Sugar Ice Cream Bar
+                </div>
+                <div class="product-id">冰品 | Ice</div>
+              </div>
+            </div>
+
+            <div class="product-group">
+              <div class="product-img-group">
+                <div class="product-background">
+                  <div class="product">
+                    <img
+                      src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
+                      alt="產品1"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="product-info">
+                <div class="product-title">老虎芝士流心雪糕</div>
+                <div class="product-title-en">
+                  Tiger Cheese Filling Black Sugar Ice Cream Bar
+                </div>
+                <div class="product-id">冰品 | Ice</div>
+              </div>
+            </div>
+
+            <div class="product-group">
+              <div class="product-img-group">
+                <div class="product-background">
+                  <div class="product">
+                    <img
+                      src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
+                      alt="產品1"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="product-info">
+                <div class="product-title">老虎芝士流心雪糕</div>
+                <div class="product-title-en">
+                  Tiger Cheese Filling Black Sugar Ice Cream Bar
+                </div>
+                <div class="product-id">冰品 | Ice</div>
+              </div>
+            </div>
+
+            <div class="product-group">
+              <div class="product-img-group">
+                <div class="product-background">
+                  <div class="product">
+                    <img
+                      src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
+                      alt="產品1"
+                    />
+                  </div>
+                </div>
               </div>
               <div class="product-info">
                 <div class="product-title">老虎芝士流心雪糕</div>
@@ -73,93 +237,17 @@
               </div>
             </div>
           </div>
+          
+          <!-- 下方分隔線 -->
+          <div class="div-line"></div>
 
-          <div class="product-group">
-            <div class="product-background">
-              <div class="product">
-                <img
-                  src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
-                  alt="產品1"
-                />
-              </div>
-              <div class="product-info">
-                <div class="product-title">老虎芝士流心雪糕</div>
-                <div class="product-title-en">
-                  Tiger Cheese Filling Black Sugar Ice Cream Bar
-                </div>
-                <div class="product-id">冰品 | Ice</div>
-              </div>
-            </div>
-          </div>
+          <!-- 頁面數 -->
 
-          <div class="product-group">
-            <div class="product-background">
-              <div class="product">
-                <img
-                  src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
-                  alt="產品1"
-                />
-              </div>
-              <div class="product-info">
-                <div class="product-title">老虎芝士流心雪糕</div>
-                <div class="product-title-en">
-                  Tiger Cheese Filling Black Sugar Ice Cream Bar
-                </div>
-                <div class="product-id">冰品 | Ice</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="product-group">
-            <div class="product-background">
-              <div class="product">
-                <img
-                  src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
-                  alt="產品1"
-                />
-              </div>
-              <div class="product-info">
-                <div class="product-title">老虎芝士流心雪糕</div>
-                <div class="product-title-en">
-                  Tiger Cheese Filling Black Sugar Ice Cream Bar
-                </div>
-                <div class="product-id">冰品 | Ice</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="product-group">
-            <div class="product-background">
-              <div class="product">
-                <img
-                  src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
-                  alt="產品1"
-                />
-              </div>
-              <div class="product-info">
-                <div class="product-title">老虎芝士流心雪糕</div>
-                <div class="product-title-en">Tiger Cheese Filling Black Sugar Ice Cream Bar</div>
-                <div class="product-id">冰品 | Ice</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="product-group">
-            <div class="product-background">
-              <div class="product">
-                <img
-                  src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
-                  alt="產品1"
-                />
-              </div>
-              <div class="product-info">
-                <div class="product-title">老虎芝士流心雪糕</div>
-                <div class="product-title-en">
-                  Tiger Cheese Filling Black Sugar Ice Cream Bar
-                </div>
-                <div class="product-id">冰品 | Ice</div>
-              </div>
-            </div>
+          <div class="page-up-and-page-down-group-buttom">
+            <button class="page-up" type="button">上一頁</button>
+            <button class="page-1" type="button">1</button>
+            <button class="page-2" type="button">2</button>
+            <button class="page-down" type="button">下一頁</button>
           </div>
 
         </div>
