--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tiger Sugar 老虎堂｜虎虎生風｜黑糖專売</title>
     <link rel="stylesheet" href="./css/distribution-confirm.css">
     <!-- swiper css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
