--- a/popwindow.html
+++ b/popwindow.html
@@ -29,8 +29,8 @@
                 <div class="product-information-content">
                     <div class="product-information-swiper">
 
-                        <div thumbsSlider="" class="swiper mySwiper">
-                            <div class="swiper-wrapper">
+                        <div thumbsSlider="" class="swiper my-swiper">
+                            <div class="swiper-wrapper display-vertical">
                                 <div class="swiper-slide">
                                     <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
                                 </div>
@@ -42,7 +42,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper mySwiper2 swiper-style">
+                        <div class="swiper my-swiper-sub swiper-style">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
@@ -82,17 +82,24 @@
                             <div class="unit">克</div>
                         </div>
                         <div class="commodity-expiration">
-                            <div class="commodity-weight-title">保存期限</div>
+                            <div class="commodity-expiration-title">保存期限</div>
                             <div class="expiration-day">12</div>
                             <div class="unit">個月</div>
                         </div>
                         <div class="commodity-preservation-method">
                             <div class="method-title">保存方式</div>
+                            <div class="method-text">1.請保存於冷凍-18℃以下，拆封後請儘早食用，以確保品質及風味。</div>
                         </div>
                     </div>
                 </div>
+                <div class="commodity-table">
+                    <ul id="commodity-tab" role="tablist" class="commodity-nav">
+                        <li role="presentation" class="nav-item"><a href="#content" data-toggle="tab" role="tab" aria-controls="home" aria-selected="true">內容</a></li>
+                        <li role="presentation" class="nav-item">注意事項</li>
+                        <li role="presentation" class="nav-item">影片</li>
+                    </ul>
+                </div>
             </div>
-            <div class="product-information-text"></div>
         </div>
     </div>
     </div>
