--- a/distribution.html
+++ b/distribution.html
@@ -9,6 +9,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
     />
+    <link rel="stylesheet" href="./css/franchisee.css">
+    <!-- common css -->
+    <link rel="stylesheet" href="./css/common.css">
+    <!-- bootstrap-icon -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   </head>
   <body>
     <!-- nav bar -->
@@ -270,7 +275,29 @@
     </script>
 
     <!-- 敏齊 -->
-    <section></section>
+    <section id="franchisee">
+      <div class="container">
+          <div class="franchisee-title">
+              <div class="franchisee-icon"></div>
+              <div class="container-franchisee-title">
+                  <h1>加盟專區</h1>
+                  <h2>FRANCHISEE</h2>
+              </div>
+          </div>
+          <div class="franchisee-container-big">
+              <div class="franchisee-container-animation" data-aos="zoom-in">
+                  <a href="" class="franchisee-link">
+                      <div class="join-us-img">
+                          <div class="join-us-info">
+                              <h2> <i class="bi bi-star-fill"></i>&nbspJoin Our Franchise! <i class="bi bi-star-fill"></i>
+                              </h2>
+                          </div>
+                      </div>
+                  </a>
+              </div>
+          </div>
+      </div>
+  </section>
 
     <!-- footer -->
     <footer></footer>
