--- a/distribution.html
+++ b/distribution.html
@@ -9,11 +9,14 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="./css/franchisee.css">
+    <link rel="stylesheet" href="./css/franchisee.css" />
     <!-- common css -->
-    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/common.css" />
     <!-- bootstrap-icon -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
   </head>
   <body>
     <!-- nav bar -->
@@ -42,22 +45,22 @@
             <!-- 品項swiper -->
             <div class="swiper mySwiper">
               <div class="swiper-wrapper">
-                <div class="swiper-slide">全部｜All</div>
-                <div class="swiper-slide">食品｜Food</div>
-                <div class="swiper-slide">零食｜Snack</div>
-                <div class="swiper-slide">冰品｜Ice</div>
-                <div class="swiper-slide">飲品｜Drink</div>
-                <div class="swiper-slide">甜點｜dessert</div>
+                <div class="swiper-slide"><a href="">全部｜All</a></div>
+                <div class="swiper-slide"><a href="">零食｜Snack</a></div>
+                <div class="swiper-slide"><a href="">冰品｜Ice</a></div>
+                <div class="swiper-slide"><a href="">飲品｜Drink</a></div>
+                <div class="swiper-slide"><a href="">食品｜Food</a></div>
+                <div class="swiper-slide"><a href="">甜點｜dessert</a></div>
               </div>
               <div class="swiper-button-next"></div>
               <div class="swiper-button-prev"></div>
             </div>
             <!-- 頁面數 -->
             <div class="page-up-and-page-down-group">
-              <button class="page-up" type="button">上一頁</button>
-              <button class="page-1" type="button">1</button>
-              <button class="page-2" type="button">2</button>
-              <button class="page-down" type="button">下一頁</button>
+              <a href="" class="page-up">上一頁</a>
+              <a href="" class="page-1">1</a>
+              <a href="" class="page-2">2</a>
+              <a href="" class="page-down">下一頁</a>
             </div>
           </div>
           <!-- 產品方格 -->
@@ -242,19 +245,18 @@
               </div>
             </div>
           </div>
-          
+
           <!-- 下方分隔線 -->
           <div class="div-line"></div>
 
           <!-- 頁面數 -->
 
           <div class="page-up-and-page-down-group-buttom">
-            <button class="page-up" type="button">上一頁</button>
-            <button class="page-1" type="button">1</button>
-            <button class="page-2" type="button">2</button>
-            <button class="page-down" type="button">下一頁</button>
+            <a href="" class="page-up">上一頁</a>
+            <a href="" class="page-1">1</a>
+            <a href="" class="page-2">2</a>
+            <a href="" class="page-down">下一頁</a>
           </div>
-
         </div>
       </div>
     </section>
@@ -277,27 +279,29 @@
     <!-- 敏齊 -->
     <section id="franchisee">
       <div class="container">
-          <div class="franchisee-title">
-              <div class="franchisee-icon"></div>
-              <div class="container-franchisee-title">
-                  <h1>加盟專區</h1>
-                  <h2>FRANCHISEE</h2>
-              </div>
+        <div class="franchisee-title">
+          <div class="franchisee-icon"></div>
+          <div class="container-franchisee-title">
+            <h1>加盟專區</h1>
+            <h2>FRANCHISEE</h2>
           </div>
-          <div class="franchisee-container-big">
-              <div class="franchisee-container-animation" data-aos="zoom-in">
-                  <a href="" class="franchisee-link">
-                      <div class="join-us-img">
-                          <div class="join-us-info">
-                              <h2> <i class="bi bi-star-fill"></i>&nbspJoin Our Franchise! <i class="bi bi-star-fill"></i>
-                              </h2>
-                          </div>
-                      </div>
-                  </a>
+        </div>
+        <div class="franchisee-container-big">
+          <div class="franchisee-container-animation" data-aos="zoom-in">
+            <a href="" class="franchisee-link">
+              <div class="join-us-img">
+                <div class="join-us-info">
+                  <h2>
+                    <i class="bi bi-star-fill"></i>&nbspJoin Our Franchise!
+                    <i class="bi bi-star-fill"></i>
+                  </h2>
+                </div>
               </div>
+            </a>
           </div>
+        </div>
       </div>
-  </section>
+    </section>
 
     <!-- footer -->
     <footer></footer>
