--- a/distribution.html
+++ b/distribution.html
@@ -74,6 +74,7 @@
                       alt="產品1"
                     />
                   </div>
+                  <div class="yellow-box"><img src="/img/add_for_ask.svg" alt="黃色詢問框"></div>
                 </div>
               </div>
               <div class="product-info">
