--- a/popwindow.html
+++ b/popwindow.html
@@ -32,32 +32,32 @@
                         <div thumbsSlider="" class="swiper my-swiper">
                             <div class="swiper-wrapper display-vertical">
                                 <div class="swiper-slide">
-                                    <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+                                    <img src="./img/sesamebun1.jpeg" />
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+                                    <img src="./img/sesamebun2.jpeg" />
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                                    <img src="./img/sesamebun3.jpeg" />
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                                    <img src="./img/sesamebun4.jpeg" />
                                 </div>
                             </div>
                         </div>
                         <div class="swiper my-swiper-sub swiper-style">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+                                    <img src="./img/sesamebun1.jpeg" />
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+                                    <img src="./img/sesamebun2.jpeg" />
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                                    <img src="./img/sesamebun3.jpeg" />
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                                    <img src="./img/sesamebun4.jpeg" />
                                 </div>
                             </div>
                             <div class="swiper-button-next"></div>
@@ -108,7 +108,7 @@
                 </div>
                 
                 
-                <div class="card-container">
+                <!-- <div class="card-container">
                     <div class="swiper-commidity mySwiper-product">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide-commidity">
@@ -263,7 +263,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
