--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tiger Sugar 老虎堂｜虎虎生風｜黑糖專売</title>
+
+    <!-- 通用css -->
+    <link rel="stylesheet" href="./css/common.css">
+
+    <!-- 專頁css -->
     <link rel="stylesheet" href="./css/distribution-confirm.css">
     <!-- swiper css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
@@ -250,17 +255,14 @@
                             <div class="basic-inside-fillout">
                                 <div class="fill-input">
                                     <div class="fill-name-birthday">
-
                                         <div class="fill-name">
                                             <div class="fill-name-text">姓名｜Name</div>
                                             <input type="text" placeholder="姓名" class="fill-name-input">
                                         </div>
-
                                         <div class="fill-birthday">
                                             <div class="fill-birthday-text">出生年月日｜Birthday</div>
-                                            <input type="date" placeholder="yyyy/月/dd" class="fill-birthday-input">
+                                            <input type="date" class="fill-birthday-input">
                                         </div>
-
                                     </div>
 
                                     <div class="fill-email">
@@ -285,11 +287,11 @@
                             <div class="fill-title">經銷商販售方式填寫</div>
                             <div class="sales-inside-fillout">
                                 <div class="sales-white-line">
-                                    <div>
+                                    
                                         <div class="fill-channel">
                                             <label for="channel" class="fill-channel-text">經銷通路｜Sales Channel</label>
                                             <select id="channel" class="fill-channel-input">
-                                                <option value="commerce" disabled selected>----請選擇</option>
+                                                <option disabled selected>----請選擇</option>
                                                 <option value="commerce">網路電商 E-Commerce</option>
                                                 <option value="convenience">便利商店 Concenience Store</option>
                                                 <option value="supermarket">超市 Supermarket</option>
@@ -312,9 +314,9 @@
                                             <div class="fill-other-text">其他｜Other</div>
                                             <input type="text" placeholder="其他" class="fill-other-input">
                                         </div>
-                                    </div>
+                                    
                                 </div>
-                                <input type="submit" value="送出資料" class="send-info">
+                                <button type="submit" class="send-info">送出資料</button>
                             </div>
                         </div>
                     </form>
