--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -11,6 +11,7 @@
 
     <!-- 專頁css -->
     <link rel="stylesheet" href="./css/distribution-confirm.css">
+    <link rel="stylesheet" href="./css/franchisee.css">
     <!-- swiper css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
 </head>
@@ -324,6 +325,31 @@
             </section>
         </div>
     </main>
+
+    <!-- 齊 加盟專區 -->
+    <section id="franchisee">
+        <div class="container">
+            <div class="franchisee-title">
+                <div class="franchisee-icon"></div>
+                <div class="container-franchisee-title">
+                    <h1>加盟專區</h1>
+                    <h2>FRANCHISEE</h2>
+                </div>
+            </div>
+            <div class="franchisee-container-big">
+                <div class="franchisee-container-animation" data-aos="zoom-in">
+                    <a href="" class="franchisee-link">
+                        <div class="join-us-img">
+                            <div class="join-us-info">
+                                <h2> <i class="bi bi-star-fill"></i>&nbspJoin Our Franchise! <i class="bi bi-star-fill"></i>
+                                </h2>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer></footer>
 
     <!-- swiper js -->
