distribution-confirm swiper結構復原

--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -45,15 +45,15 @@
                                     <div class="swiper-slide">食品｜Food</div>
                                     <div class="swiper-slide">甜點｜dessert</div>
                                 </div>
-                            </div>
-                            <div class="swiper-button-distribution-container">
-                                <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide"
-                                    aria-controls="swiper-wrapper-53fd5a51ba467ec1" aria-disabled="false">
-                                    <img class="next-prev-img" src="./img/commodity-next.svg" alt="">
-                                </div>
-                                <div class="swiper-button-prev" tabindex="0" role="button" aria-label="Previous slide"
-                                    aria-controls="swiper-wrapper-53fd5a51ba467ec1" aria-disabled="false">
-                                    <img class="next-prev-img" src="./img/commodity-prev.svg" alt="">
+                                <div class="swiper-button-distribution-container">
+                                    <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide"
+                                        aria-controls="swiper-wrapper-53fd5a51ba467ec1" aria-disabled="false">
+                                        <img class="next-prev-img" src="./img/commodity-next.svg" alt="">
+                                    </div>
+                                    <div class="swiper-button-prev" tabindex="0" role="button" aria-label="Previous slide"
+                                        aria-controls="swiper-wrapper-53fd5a51ba467ec1" aria-disabled="false">
+                                        <img class="next-prev-img" src="./img/commodity-prev.svg" alt="">
+                                    </div>
                                 </div>
                             </div>
                             <button type="button" class="delete-all btn">全部刪除</button>
@@ -80,7 +80,7 @@
                     <div class="content-area">
                         <div class="card-container">
                             <div class="direction-body">
-                                <div class="img-w-h-border-img">
+                                <div class="img-hover">
                                     <img class="product-img"
                                         src="./images/product/1668998205a2557a7b2e94197ff767970b67041697.jpg" alt="">
                                     <img class="ask-icon" src="./images/distribution-confirm/icon/delete.svg" alt="">
@@ -103,7 +103,7 @@
                                 </div>
                             </div>
                             <div class="direction-body">
-                                <div class="img-w-h-border-img">
+                                <div class="img-hover">
                                     <img class="product-img"
                                         src="./images/product/165899031442a0e188f5033bc65bf8d78622277c4e.jpg" alt="">
                                     <img class="ask-icon" src="./images/distribution-confirm/icon/delete.svg" alt="">
@@ -126,7 +126,7 @@
                                 </div>
                             </div>
                             <div class="direction-body">
-                                <div class="img-w-h-border-img">
+                                <div class="img-hover">
                                     <img class="product-img"
                                         src="./images/product/165899100742a0e188f5033bc65bf8d78622277c4e.jpg" alt="">
                                     <img class="ask-icon" src="./images/distribution-confirm/icon/delete.svg" alt="">
@@ -149,7 +149,7 @@
                                 </div>
                             </div>
                             <div class="direction-body">
-                                <div class="img-w-h-border-img">
+                                <div class="img-hover">
                                     <img class="product-img"
                                         src="./images/product/1658908734cfecdb276f634854f3ef915e2e980c31.jpg" alt="">
                                     <img class="ask-icon" src="./images/distribution-confirm/icon/delete.svg" alt="">
@@ -172,7 +172,7 @@
                                 </div>
                             </div>
                             <div class="direction-body">
-                                <div class="img-w-h-border-img">
+                                <div class="img-hover">
                                     <img class="product-img"
                                         src="./images/product/16589912415878a7ab84fb43402106c575658472fa.jpg" alt="">
                                     <img class="ask-icon" src="./images/distribution-confirm/icon/delete.svg" alt="">
@@ -195,7 +195,7 @@
                                 </div>
                             </div>
                             <div class="direction-body">
-                                <div class="img-w-h-border-img">
+                                <div class="img-hover">
                                     <img class="product-img"
                                         src="./images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg" alt="">
                                     <img class="ask-icon" src="./images/distribution-confirm/icon/delete.svg" alt="">
