--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -50,8 +50,9 @@
                                         aria-controls="swiper-wrapper-53fd5a51ba467ec1" aria-disabled="false">
                                         <img class="next-prev-img" src="./img/commodity-next.svg" alt="">
                                     </div>
-                                    <div class="swiper-button-prev" tabindex="0" role="button" aria-label="Previous slide"
-                                        aria-controls="swiper-wrapper-53fd5a51ba467ec1" aria-disabled="false">
+                                    <div class="swiper-button-prev" tabindex="0" role="button"
+                                        aria-label="Previous slide" aria-controls="swiper-wrapper-53fd5a51ba467ec1"
+                                        aria-disabled="false">
                                         <img class="next-prev-img" src="./img/commodity-prev.svg" alt="">
                                     </div>
                                 </div>
@@ -288,34 +289,34 @@
                             <div class="fill-title">經銷商販售方式填寫</div>
                             <div class="sales-inside-fillout">
                                 <div class="sales-white-line">
-                                    
-                                        <div class="fill-channel">
-                                            <label for="channel" class="fill-channel-text">經銷通路｜Sales Channel</label>
-                                            <select id="channel" class="fill-channel-input">
-                                                <option disabled selected>----請選擇</option>
-                                                <option value="commerce">網路電商 E-Commerce</option>
-                                                <option value="convenience">便利商店 Concenience Store</option>
-                                                <option value="supermarket">超市 Supermarket</option>
-                                                <option value="hypermarket">大賣店 Hypermarket</option>
-                                            </select>
-                                        </div>
 
-                                        <div class="fill-country">
-                                            <label for="country" class="fill-country-text">預定經銷國家｜Distirbution
-                                                Area</label>
-                                            <select id="country" class="fill-country-input">
-                                                <option value="america">America</option>
-                                                <option value="california">California</option>
-                                                <option value="canada">Canada</option>
-                                                <option value="taiwan" selected>Taiwan</option>
-                                            </select>
-                                        </div>
+                                    <div class="fill-channel">
+                                        <label for="channel" class="fill-channel-text">經銷通路｜Sales Channel</label>
+                                        <select id="channel" class="fill-channel-input">
+                                            <option disabled selected>----請選擇</option>
+                                            <option value="commerce">網路電商 E-Commerce</option>
+                                            <option value="convenience">便利商店 Concenience Store</option>
+                                            <option value="supermarket">超市 Supermarket</option>
+                                            <option value="hypermarket">大賣店 Hypermarket</option>
+                                        </select>
+                                    </div>
 
-                                        <div class="fill-other">
-                                            <div class="fill-other-text">其他｜Other</div>
-                                            <input type="text" placeholder="其他" class="fill-other-input">
-                                        </div>
-                                    
+                                    <div class="fill-country">
+                                        <label for="country" class="fill-country-text">預定經銷國家｜Distirbution
+                                            Area</label>
+                                        <select id="country" class="fill-country-input">
+                                            <option value="america">America</option>
+                                            <option value="california">California</option>
+                                            <option value="canada">Canada</option>
+                                            <option value="taiwan" selected>Taiwan</option>
+                                        </select>
+                                    </div>
+
+                                    <div class="fill-other">
+                                        <div class="fill-other-text">其他｜Other</div>
+                                        <input type="text" placeholder="其他" class="fill-other-input">
+                                    </div>
+
                                 </div>
                                 <button type="submit" class="send-info">送出資料</button>
                             </div>
@@ -341,7 +342,8 @@
                     <a href="" class="franchisee-link">
                         <div class="join-us-img">
                             <div class="join-us-info">
-                                <h2> <i class="bi bi-star-fill"></i>&nbspJoin Our Franchise! <i class="bi bi-star-fill"></i>
+                                <h2> <i class="bi bi-star-fill"></i>&nbspJoin Our Franchise! <i
+                                        class="bi bi-star-fill"></i>
                                 </h2>
                             </div>
                         </div>
