pageup-pagedown update

--- a/distribution.html
+++ b/distribution.html
@@ -61,6 +61,9 @@
                 <img src="/img/previous.png" alt="上一頁小圖標">上一頁</a>
               <a href="" class="page-1">1</a>
               <a href="" class="page-2">2</a>
+              <a href="" class="page-3">3</a>
+              <a href="" class="page-4">4</a>
+              <a href="" class="page-5">5</a>
               <a href="" class="page-down">下一頁
                 <img src="/img/next.png" alt="下一頁小圖標">
               </a>
