--- a/popwindow.html
+++ b/popwindow.html
@@ -62,6 +62,7 @@
                             </div>
                             <div class="swiper-button-next"></div>
                             <div class="swiper-button-prev"></div>
+                            <div class="swiper-pagination swiper-page-dec"></div>
                         </div>
                     </div>
 
